<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:text="@string/companyName"
        android:textSize="36sp"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/clothingRadioGroup"
        android:layout_width="362dp"
        android:layout_height="138dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/sweatshirts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sweatshirt" />

        <RadioButton
            android:id="@+id/teeShirts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teeShirt" />

        <RadioButton
            android:id="@+id/longsleeves"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/longSleeve" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quarterZip" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="53dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="28dp"
        android:onClick="presentViewController"
        android:text="@string/letsDoIt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/webSwitch"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:text="@string/webView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clothingRadioGroup" />

    <Switch
        android:id="@+id/appSwitch"
        android:layout_width="207dp"
        android:layout_height="63dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:text="@string/appView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webSwitch" />

    <EditText
        android:id="@+id/newScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="42dp"
        android:ems="10"
        android:hint="@string/EditTextHint"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/highScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginLeft="164dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:text="@string/happinessLevel"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>